--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <!-- 6 張產品卡：一行兩個（手機） -->
         <article class="product">
           <div class="top"><span class="badge">65 週年價</span><span class="muted">Dyson</span></div>
-          <div class="ph"><img alt="Dyson" src="https://hengstyle.com/storage/media/f9ed75c0-4206-43fd-8093-4b6e076392ef.jpg"></div>
+          <div class="ph"><img alt="Dyson" src="https://img.91app.com/webapi/imagesV3/Original/SalePage/8889362/0/638989717094130000?v=1"></div>
           <div class="body">
             <div class="name">V12s Detect Slim Submarine 乾濕全能洗地吸塵器</div>
             <div class="price">NT$14,900</div>
